<resources>

    <string name="app_name">TEC Air</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_register">Sign Up</string>
    <string name="login_registerStudent">Complete Sign Up</string>
    <string name="login_button">Sign In</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_ID">ID</string>
    <string name="hint_email">E - mail</string>
    <string name="hint_college">College </string>
    <string name="hint_collegeID">College ID </string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Done</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="hint_numpass">Numero de pasajeros</string>
    <string name="hint_date">dd/mm/aaaa</string>
    <string name="text_promos">Promociones</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_flights">Vuelos</string>
    <string name="hint_codigo">codigo(cambiar)\n</string>
    <string name="hint_descuento">descuento(cambiar)\n</string>
    <string name="hint_vencimiento">vencimiento(cambiar)\n</string>
    <string name="hint_costo">costo(cambiar)\n</string>
    <string name="hint_estado">estado(cambiar)</string>
    <string name="hint_id">id(cambiar)\n</string>

</resources>